Fix vertical alignment of search bar
- This should really be fixed by changing the strategy used to align the
other elements within this block.

[#169808620]

--- a/src/components/layout/navigation/TopNavbar.less
+++ b/src/components/layout/navigation/TopNavbar.less
@@ -2,4 +2,8 @@
   .display-mobile-and-tablet {
     float: right;
   }
+
+  .searchbar {
+    line-height: 84px;
+  }
 }
